--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy
-opencv_python
-PyQt5
-PyQt5_sip
-Send2Trash
+numpy==1.25.2
+opencv_python==4.8.0.74
+PyQt5==5.15.9
+PyQt5_sip==12.12.2
+pytest==7.4.0
+Send2Trash==1.8.2
