--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,21 @@
 [tool.poetry]
 name = "MSE-Duplicate-Search"
-version = "0.1.0"
+version = "0.1.1"
 description = "Duplicate image locator that finds images that have been resized"
 authors = ["Vaedrenn <vaedrenn@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 
 packages = [
-  {include = "Application", from = "src"},
-  {include = "find_dupes", from = "src"}
+  {include = "gui", from = "ImageTwinTracker"},
+  {include = "actions", from = "ImageTwinTracker"},
+  {include = "styles", from = "ImageTwinTracker"}
 ]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 numpy = "1.25.2"
-opencv-python = "4.8.0.74"
+pillow = "10.0.0"
 pyqt5 = "5.15.9"
 pyqt5-sip = "12.12.2"
 send2trash = "1.8.2"
